--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+#error_explanation h2 {font-size: 20px; margin-top: 0;}
+
+.admin-container {
+	margin-top: 73px;
+}
+
