user can upload many images of his gadgets

--- a/app/views/gadgets/_gadgets_in_cover_mode.html.erb
+++ b/app/views/gadgets/_gadgets_in_cover_mode.html.erb
@@ -3,12 +3,18 @@
   <thead>
     <tr>
       <th>Gadget title</th>
+      <th>Gadget images</th>
     </tr>
   </thead>
   <tbody>
     <% @gadgets.each do |gadget| %>
       <%= content_tag(:tr, class: "gadget_row", data: { gadget: gadget.id } ) do -%>
         <td><%=gadget.title%></td>
+        <td>
+          <% gadget.photos.each do |image| -%>
+            <%= image_tag image.photo.url(:thumb) %>
+          <% end -%>
+        </td>
       <% end -%>
     <% end %>
   </tbody>
