--- a/app/views/gadgets/_gadgets_view_modes_selector.html.erb
+++ b/app/views/gadgets/_gadgets_view_modes_selector.html.erb
@@ -1,4 +1,5 @@
 <div id="view_mode">
-	<%= view_mode_selector(:cover, "Cover Flow", "th-large") -%>
-	<%= view_mode_selector(:list, "List", "th-large") -%>
+	<%= view_mode_selector(:cover, "Cover Flow", "th-large", @view_mode) -%>
+	<%= view_mode_selector(:list, "List", "list", @view_mode) -%>
 </div>
+
