--- a/app/views/gadgets/index.js.erb
+++ b/app/views/gadgets/index.js.erb
@@ -1,1 +1,2 @@
-$("#gadgets_collection").html("<%= j render('gadgets_collection') %>");
+$("#gadgets_collection").html("<%= j render('gadgets_collection') %>"); // update gadgets collection
+$("#view_mode").html("<%= j render('gadgets_view_modes_selector') %>"); // update view mode selector (highlight active button)
