--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,7 @@
-Welcome to Gadgets, <%= current_user.email %>!
+<div class="jumbotron">
+  <h1>Welcome to Gadgets!</h1>
+
+  <p>Gadgets is a simple application that allows you to manage your gadgets collection. With Gadgets you can easily create list of your favourite gadgets and upload their photos, as many as you like! Then simply view your gadgets collection in Cover Flow or List Mode, add more photos, rename or add new gadgets, or search your gadgets by name!</p>
+
+  <p><%= b "Let's start!", gadgets_path, "", :primary, :lg %></p>
+</div>
