--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,8 @@
         <div class="navbar-header">
           <button data-target="navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </button>
-          <a href="/" class="navbar-brand">Gadgets</a>
+          <a href="/" class="navbar-brand">Welcome!</a>
         </div>
         <div class="collapse navbar-collapse">
           <%= content_tag :ul, class: "nav navbar-nav" do -%>
