--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -2,14 +2,15 @@
 	<%= render partial: 'layouts/errors', :locals => {element: @gadget} %>
 
   <div class="form-group">
-    <%= f.label :title, :class => "col-sm-1 control-lab" %>
+
     <div class="col-sm-10">
-      <%= f.text_field :title, class: "form-control" %>
+      <%= f.text_field :title, class: "form-control", placeholder: "Please enter gadget title" %>
+
     </div>
   </div>
 
   <div class="form-group">
-    <div class="col-sm-offset-1 col-sm-10">
+    <div class="col-sm-10">
       <%= f.submit "Save", class: "btn btn-primary" %>
       <%= link_to 'Cancel', gadgets_path, class: "btn btn-danger" %>
     </div>
