--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -1,12 +1,18 @@
 <% if @gadgets.any? %>
 	<%= render partial: "gadgets_view_modes_selector" %>
 
-	<h4>My Gadgets Collection</h4>
+	<h4>My Gadgets Collection <%= b 'Add Gadget', new_gadget_path, :plus, :primary, :xs %></h4>
+
 	<%= render partial: "gadgets_collection" %>
 
 <% else %>
-	<h2>You don't have any gadgets yet.</h2>
-<% end %>
 
-<hr>
-<%= link_to 'Add Gadget', new_gadget_path, class: "btn btn-primary" %>
+	<div class="jumbotron">
+		<h2>You don't have any gadgets yet.</h2>
+		<p>It seems like you don't have any gadgets in your collection yet. No problem! Let's create our first gadget.</p>
+		<p><%= b 'Add Gadget', new_gadget_path, :plus, :primary, :lg %>
+	  	</p>
+	</div>
+
+<% end %>
+<%= javascript_include_tag "gadgets/index" %>
