added select2 to project and search feature spec

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,8 @@
  *= require_tree .
  *= require editable/bootstrap-editable
  *= require contentflow
+ *= require select2
+ *= require select2-bootstrap
  *= require_self
  */
 
