--- a/app/views/gadgets/_gadgets_in_cover_mode.html.erb
+++ b/app/views/gadgets/_gadgets_in_cover_mode.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "gadgets_search" %>
 <h5 class="view_mode">Cover Flow View</h5>
 <table class="disabled table table-hovers table-condensed table-striped table-bordered">
   <tbody>
@@ -6,6 +7,7 @@
       <tr class="active collection_title"><td><h4><%= editable gadget, :title %> <%= b 'Add Photos', gadget_path(gadget), :file, :default, :xs %></h4></td></tr>
       <%= content_tag(:tr, class: "gadget_row", data: { gadget: gadget.id } ) do -%>
         <td>
+             <% if gadget.photos.any? %>
              <div class="ContentFlow">
                 <div class="loadIndicator"><div class="indicator"></div></div>
                 <div class="flow">
@@ -16,6 +18,9 @@
                 <div class="globalCaption"></div>
                 <div class="scrollbar"><div class="slider"><div class="position"></div></div></div>
             </div>
+            <% else %>
+              <h5>No photos for <%=gadget.title%> uploaded yet</h5>
+            <% end %>
         </td>
       <% end -%>
     <% end %>
