--- a/app/views/gadgets/_gadgets_search.html.erb
+++ b/app/views/gadgets/_gadgets_search.html.erb
@@ -1,3 +1,4 @@
 <%= form_for(:gadget, url: search_path, method: :post, html: {id: "search"}) do |f| -%>
-	Search <%= collection_select(:gadget, :gadget_id, @user_gadgets, :id, :title, prompt: "", selected: @search_gadget) %> <%=search_b("", "#", "search_button", :search, :default, :xs)%> <%=b "", gadgets_path, :remove, "default clear_search", :xs %>
+	Search <%= collection_select(:gadget, :gadget_id, @user_gadgets, :id, :title, prompt: "", selected: @search_gadget) %>
+	<%=b "", gadgets_path, :remove, "default clear_search", :xs %>
 <% end -%>
