fixed typo in upload help text

--- a/app/views/gadgets/show.html.haml
+++ b/app/views/gadgets/show.html.haml
@@ -1,5 +1,5 @@
 %h1= editable @gadget, :title
-%span.help-block Let's upload photos of this gadget. Click 'Browse' to select your images or simply drag them drop zone!
+%span.help-block Let's upload photos of this gadget. Click 'Browse' to select your images or simply drag them over the drop zone below!
 
 -# upload area
 #upload
