--- a/app/views/gadgets/index.html.haml
+++ b/app/views/gadgets/index.html.haml
@@ -1,7 +1,6 @@
 - if @gadgets.any?
   = render partial: "gadgets_view_modes_selector"
-  %h4
-    My Gadgets Collection #{b 'Add Gadget', new_gadget_path, :plus, :primary, :xs}
+  %h4 My Gadgets Collection
   = render partial: "gadgets_collection"
 - else
   .jumbotron
