--- a/app/views/gadgets/show.html.haml
+++ b/app/views/gadgets/show.html.haml
@@ -1,9 +1,7 @@
-%h1= editable @gadget, :title
+%h1= editable @gadget, :title, {placeholder: "Gadget Title", required: true}
 %span.help-block Let's upload photos of this gadget. Click 'Browse' to select your images or simply drag them over the drop zone below!
 
--# upload area
 #upload
-  -# dropzone
   #dropzone
     .title Drop files to upload
     .browse.btn.btn-primary Browse
@@ -11,10 +9,8 @@
     .upload-list
   
 #gadgets_collection
-  %h3
-    My #{@gadget.title} Photos
-    %hr
-    = render partial: "gadget_photo_with_popover", collection: @gadget.photos, as: :photo
+  %h3 My #{@gadget.title} Photos
+  = render partial: "gadget_photo_with_popover", collection: @gadget.photos, as: :photo
 %hr
 = b "Back", gadgets_path, "arrow-left"
 
