--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,7 +28,7 @@
 #loading {position: absolute; left: 0; top: 0; opacity: 0.9; z-index: 5000; width: 64px; height: 64px; background-image: url(ajax_loading.gif); background-size: 100%}
 #gadgets_collection h5.view_mode {text-align: right;}
 .hint {color: #999; font-weight: normal;}
-.ContentFlow {background-color: black; padding-top: 50px;}
+.ContentFlow {background-color: black; padding-top: 50px; overflow:auto}
 tr.collection_title td, tr.gadget_row td {text-align: center;}
 
 #upload {display: table; width:100%; 
@@ -91,3 +91,40 @@ table.list-view tr td.title {width: 300px; text-align: left; padding-left: 1em; 
 table.list-view tr td.control {width: 130px; line-height:2em; }
 .count {float: left; padding-right: 1em;}
 .help-block {text-align: left !important}
+.cover_view h4 {color: black; background-color: #f5f5f5; border: 1px solid #ddd; margin-bottom: 0; line-height: 2.5em; padding-left: 1em}
+.right {margin-left: 1em}
+
+
+/* Loading Circle Preloader */
+.mfp-preloader {
+    background-color: rgba(0,0,0,0);
+    border:5px solid rgba(0,183,229,0.9);
+    opacity:.9;
+    border-top:5px solid rgba(0,0,0,0);
+    border-left:5px solid rgba(0,0,0,0);
+    border-radius:50px;
+    box-shadow: 0 0 35px #2187e7;
+    width:50px;
+    height:50px;
+    margin:0 auto;
+    -moz-animation:spin .5s infinite linear;
+    -webkit-animation:spin .5s infinite linear;
+}
+
+
+@-moz-keyframes spin {
+    0% { -moz-transform:rotate(0deg); }
+    100% { -moz-transform:rotate(360deg); }
+}
+@-moz-keyframes spinoff {
+    0% { -moz-transform:rotate(0deg); }
+    100% { -moz-transform:rotate(-360deg); }
+}
+@-webkit-keyframes spin {
+    0% { -webkit-transform:rotate(0deg); }
+    100% { -webkit-transform:rotate(360deg); }
+}
+@-webkit-keyframes spinoff {
+    0% { -webkit-transform:rotate(0deg); }
+    100% { -webkit-transform:rotate(-360deg); }
+}
