--- a/app/views/gadgets/_gadgets_in_list_mode.html.haml
+++ b/app/views/gadgets/_gadgets_in_list_mode.html.haml
@@ -1,3 +1,4 @@
+= render partial: "gadgets_search"
 %h5.view_mode List View
 %table.disabled.table.table-hovers.table-condensed.table-bordered.list-view
   %tbody
