--- a/app/views/gadgets/_gadgets_search.html.haml
+++ b/app/views/gadgets/_gadgets_search.html.haml
@@ -1,3 +1,3 @@
-= form_for(:gadget, url: search_path, method: :post, html: {id: "search"}) do |f|
+= form_for(:gadget, url: search_path, method: :get, html: {id: "search"}) do |f|
   Search #{collection_select(:gadget, :gadget_id, @user_gadgets, :id, :title, prompt: "", selected: @search_gadget)}
-  \#{b "", gadgets_path, :remove, "default clear_search", :xs}
+  \#{b "", gadgets_path(clear_search: true), :remove, "default clear_search", :xs}
